<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/ll_middle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="@color/white"
            android:orientation="vertical">
            <ScrollView
                android:id="@+id/sv_0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:paddingBottom="0dp">

                        <EditText
                            android:id="@+id/txtUserId"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/enterUserName"
                            android:inputType="textPersonName"
                            android:text="" />
                        <EditText
                            android:id="@+id/txtToken"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:hint="@string/enterPassword"
                            android:inputType="textPassword" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:paddingBottom="0dp">
                        <Button
                            android:id="@+id/btnGenTestToken"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/genTestToken"
                            />

                        <Button
                            android:id="@+id/btnLogin"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/login"
                            />
                        <Button
                            android:id="@+id/btnCheckLogin"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/checkLogin"
                            />
                        <Button
                            android:id="@+id/btnLogout"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/logout"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:paddingBottom="0dp">

                        <EditText
                            android:id="@+id/txtTo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:ems="10"
                            android:hint="@string/enterCallUser"
                            android:inputType="text"
                            android:minHeight="48dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:paddingBottom="0dp">
                        <Button
                            android:id="@+id/bntCall"
                            android:textAllCaps="false"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/call"
                            />
                        <Button
                            android:id="@+id/btnEnd"
                            android:textAllCaps="false"
                            android:layout_marginLeft="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/hangUp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:paddingBottom="0dp">
                        <Button
                            android:id="@+id/btnAudioRoute"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:text="@string/MicrophoneOrSpeaker"
                            />
                        <Button
                            android:id="@+id/btnMute"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/mute"
                            />
                        <Button
                            android:id="@+id/btnUnMute"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/unMute"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:paddingLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:paddingBottom="0dp">
                        <Button
                            android:id="@+id/btnGetPlayoutVolume"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/GetVolume"
                            />
                        <Button
                            android:id="@+id/btnSetPlayoutVolume"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/SetVolume"
                            />
                        <Button
                            android:id="@+id/btnClearLog"
                            android:textAllCaps="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:padding="5dp"
                            android:layout_marginLeft="5dp"
                            android:text="@string/ClearLogs"
                            />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_tccc_log"
            android:layout_width="400dp"
            android:visibility="gone"
            android:layout_height="650dp"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:background="@color/purple_200"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="50dp" />

        <ImageButton
            android:id="@+id/btn_showT3CLog"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/trtccalling_icon_search"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:elevation="1dp"
            />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>